--- a/views/admin_dashboard-manage_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory.hbs
@@ -4,11 +4,9 @@
 <!--Description: This is the body of the admin_dashboard-manage_inventory page-->
 <div style="margin-top: 30px;margin-bottom: 50px;">
       <div class="container-fluid">
-          <div class="row">
-              <div class="col-md-12 offset-xl-1" style="margin-top: 25px;height: 90px;margin-bottom: 10px;">
-                  <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {{userInfo.firstname}}!</strong></h1>
-              </div>
-          </div>
+        <div>
+          <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px; padding-bottom: 35px; padding-left: 85px;"><strong>Hi There, {{userInfo.firstname}}!</strong></h1>
+        </div>
           <!--This is the part that has the nav bar with the dashboard, manage inventory, manage orders, and manage accounts-->
           <div class="row justify-content-center align-items-center" style="height: 100%;">
               <div class="col-auto col-sm-11 col-md-9 col-lg-9 col-xl-11 text-break text-center align-self-center m-auto" style="padding: 5px;padding-left: 40px;">
