--- a/views/admin_dashboard.hbs
+++ b/views/admin_dashboard.hbs
@@ -6,10 +6,8 @@
 <!--This div holds the main admin dashboard-->
 <div style="margin-top: 30px;margin-bottom: 50px;">
       <div class="container-fluid">
-          <div class="row">
-              <div class="col-md-12 offset-xl-1" style="margin-top: 25px;height: 90px;margin-bottom: 10px;">
-                  <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {{userInfo.firstname}}!</strong></h1>
-              </div>
+          <div>
+            <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px; padding-bottom: 35px; padding-left: 85px;"><strong>Hi There, {{userInfo.firstname}}!</strong></h1>
           </div>
 
           <!--Here is the links in the nav bar that are the dashboard, manage inventory, manage orders, and manage accounts-->
