--- a/views/user_dashboard-view_orders.hbs
+++ b/views/user_dashboard-view_orders.hbs
@@ -50,7 +50,7 @@
                                           {{#each orders}}
                                           <tr>
                                               <td>{{ordernum}}</td>
-                                              <td>{{quanitity}}</td>
+                                              <td>{{quantity}}</td>
                                               <td>{{ordertotal}}</td>
                                               <td>{{orderdate}}</td>
                                               <td>{{itemid}}</td>
