--- a/views/admin_dashboard-manage_orders.hbs
+++ b/views/admin_dashboard-manage_orders.hbs
@@ -40,6 +40,7 @@
                                         <tbody>
                                             {{#each orders}}
                                             <tr>
+                                                <!--This is the order details-->
                                                 <td><a href="/admin_dashboard/manage_orders/sub_order/{{ordernum}}">{{ordernum}}</a></td>
                                                 <td>{{customernum}}</td>
                                                 <td><a href="/marketItem/{{itemid}}">{{itemid}}</a></td>
